<package>
  <name>brrobot</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for brrobot</p>
    <p>This package contains configuration data, 3D models and launch files
for brrobot robot</p>
  </description>
  <author>tzu</author>
  <maintainer email="yingtzu325@icloud.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>brrobot_driver</run_depend>
  <run_depend>brrobot_support</run_depend>
  <run_depend>brrobot_resources</run_depend>
  <run_depend>industrial_robot_client</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>xacro</run_depend>
  <export>
    <architecture_independent />
    <rosindex>
      <tags>
        <tag>support_package</tag>
        <tag>description</tag>
        <tag>brrobot</tag>
        <tag>industrial</tag>
        <tag>ros-industrial</tag>
      </tags>
    </rosindex>
    <ros_industrial>
      <support_level value="community" />
    </ros_industrial>
  </export>
</package>
